[package]
name = "nulldb"
version = "0.1.0"
edition = "2021"
default-run = "week2"

[[bin]]
name = "week1"
path = "src/week1/main.rs"

[[bin]]
name = "week2"
path = "src/week2/main.rs"

[dependencies]
futures = "0.3.30"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
